--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "milico-splash",
     "version": "1.0.0",
-    "description": "Você pode substituir Intervenção Militar por Flores, por exemplo.",
+    "description": "Você pode substituir Intervenção Militar por flores, por exemplo. 🌸🌷🌼🌺🌻",
     "main": "gulpfile.js",
     "scripts": {
         "start": "gulp default && gulp watch"
